--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    implementation "io.reactivex.rxjava3:rxjava:3.0.0-RC2"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 }
